# Lab_WordCount

./: CMakeLists.txt  FileProcessor.h  README.md  Word_count_multi_thread.cpp  Word_count_one_thread.cpp  config.txt  config_reader.h  count_words.cpp  libarchive_wrapper.cpp  libarchive_wrapper.h  main.cpp  main2.c  test.txt  test_config.cpp
dependencies/: FileProcessor.cpp  FileProcessor.h
src/: Word_count_multi_thread.cpp  Word_count_one_thread.cpp
